Fix alignment for button on contacts page

--- a/src/css/blocks/guest/guest-form.less
+++ b/src/css/blocks/guest/guest-form.less
@@ -135,7 +135,6 @@
 	&__submit-holder {
 		width: 100%;
 		display: flex;
-		justify-content: center;
 	}
 	&__submit {
 		height: 61px;
